--- a/Views/CustomerSummary/Index.cshtml
+++ b/Views/CustomerSummary/Index.cshtml
@@ -8,39 +8,32 @@
 <div class="text-center">
     <h4 class="display-5">Customer Summary</h4>
 </div>
-<fieldset class="scheduler-border">
-<div class="container-flow">
-<div class="mb-1 row">
-           <div class="col-lg-1 text-right">
-                <label for="startDate" class="col-form-label" style="font-size:8px;"> Start Order Date:</label>
-            </div>
-            <div class="col-lg-1 p-0">
-                <input type="date" class="form-control"  style="font-size:8px;" id='startDate' name="startDate" />
-           </div>   
-           <div class="col-lg-1"></div>
-           <div class="col-lg-1 text-right">
-                <label for="endDate"  style="font-size:8px;"> End Order Date:</label>
-            </div>
-           <div class="col-lg-1 p-0">
-                <input type="date" class="form-control"  style="font-size:8px;" id='endDate' name="endDate" />
-            </div>
-            <div class="col-lg-1 "></div>
-            <div class="col-lg-1 text-right">
-                <label for="StatusDropdown" class="col-form-label" style="font-size:8px;">Status:</label>
-            </div>
-            <div class="col-lg-2">
-                <select style="font-size:10px;" class="form-control" id="StatusDropdown" name="StatusDropdown"></select> 
-            </div>
-                <div class="col-lg-2"></div>
-            <div class="col-lg-1 text-right">
-                 <button class="btn btn-outline-secondary" style="font-size:10px;" id="search" type="button">Search</button>  
-            </div>        
-</div>
-</div>
-</fieldset>
+<body>
+  <div class="searchDate">
+      <label for="startDate" class="Label" >Start Order Date:</label>
+      <input type="date"id='startDate' class="Date" name="startDate" />
+  </div>
+  <div class="Gap2"></div>
+  <div class="searchDate">
+      <label for="endDate" class="Label" >End Order Date:</label>
+      <input type="date"id='endDate' class="Date" name="endDate" />
+  </div>
+  <div class="Gap2"></div>
+  <div class="searchDropdown2"> 
+      <label for="StatusDropdown"  class="Label">Status:</label>
+      <select class="form-control dropDownInput2" id="StatusDropdown" name="StatusDropdown"></select> 
+  </div>
+</body>
 
 <table id="customerSummary"></table>
 <div id="jqGridPager"></div>
+<fieldset class="scheduler-border">
+ <div class="mb-3 row">
+    <div class="col-lg-12">
+          <button class="btn btn-secondary btn-lg btn-block" style="font-size:12px;" id="newPage" type="button"> New Page </button>  
+    </div>
+ </div>
+</fieldset>
 @section scripts {
 
 <script type="text/javascript">
@@ -93,8 +86,9 @@
 
                  ],  
                viewrecords: true,
-               height: 500,
-               rowNum: 20,
+               height: 388.5,
+               rowHeight: 20,
+               rowNum: 15,
                pager: "#jqGridPager",
                editurl: 'CustomerSummary/Update', 
                ondblClickRow: function(rowid) {
